<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">String Compare for RND</string>
    <string name="action_settings">Settings</string>
    <string name="start_text_view">Usability Testing</string>
    <string name="start_button">Start Test</string>
    <string name="test1">Test 1</string>
    <string name="test2">Test 2</string>
    <string name="test3">Test 3</string>
    <string name="test4">Test 4</string>
    <string name="test5">Test 5</string>
    <string name="test6">Test 6</string>
    <string name="test7">Test 7</string>
    <string name="test8">Test 8</string>
    <string name="test1_hint">Please Enter The Usability Key</string>
    <string name="submit_button">Submit</string>
    <string name="radio_button_1">3c3d 3645 5f6a 6942 2e77 4d6e 7e57 6f34 8a2b 253a</string>
    <string name="radio_button_2">3c3d 3645 5f6a 6642 2e77 4d6e 7e57 6f34 3a2d 253a</string>
    <string name="radio_button_3">3c3d 3645 2e6a 6942 2e77 4d6e 7e57 6e34 3a2b 253a</string>
    <string name="radio_button_4">3c3d 3645 2f6a 6942 2e77 4d6e 7e57 6f34 3a2b 253a</string>
    <string name="radio_button_5">3c3d 3945 5f6a 6942 2e77 4d6e 7e67 6f34 3a2b 253a</string>
    <string name="hex_test5_submit_button">Submit</string>
    <string name="hex_test5_checkbox1">4517</string>
    <string name="hex_test5_checkbox2">5e83</string>
    <string name="hex_test5_checkbox3">38cc</string>
    <string name="hex_test5_checkbox4">8f90</string>
    <string name="hex_test5_checkbox5">8e09</string>
    <string name="hex_test5_checkbox6">e758</string>
    <string name="hex_test5_checkbox7">9442</string>
    <string name="hex_test5_checkbox8">e034</string>
    <string name="hex_test5_checkbox9">803e</string>
    <string name="hex_test5_checkbox10">e253</string>
    <string name="hex_test5_checkbox11">9877</string>
    <string name="hex_test5_checkbox12">1437</string>
    <string name="hex_test5_checkbox13">9003</string>
    <string name="hex_test5_checkbox14">5ec1</string>
    <string name="hex_test5_checkbox15">69e4</string>
    <string name="message">test</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
    <string name="test2_hint">XX XX XX XX XX XX XX XX XX XX XX XX XX XX XX XX XX XX XX XX</string>
    <string name="hax_radio_button_1">4f 75 7b 4f 72 31 4e 70 47 7c 33 32 48 2e 54 29 2b 5a 69 24</string>
    <string name="hax_radio_button_2">4f 75 7d 4f 72 31 4e 70 4a 7c 33 32 48 2e 59 29 2b 5a 69 24</string>
    <string name="hax_radio_button_3">4f 75 7d 4f 72 3T 4e 70 4a 7c 33 32 48 2e 56 29 2b 5a 69 24</string>
    <string name="hax_radio_button_4">4f 7a 7d 4f 72 31 4e 70 4a 7c 33 32 48 2f 59 29 2b 5a 69 24</string>
    <string name="hax_radio_button_5">4f 75 7d 4f 72 31 4e 78 4a 7c 33 32 48 2e 59 29 2d 5a 69 24</string>
    <string name="hex_test6_checkbox11">30</string>
    <string name="hex_test6_checkbox4">69</string>
    <string name="hex_test6_checkbox18">f1</string>
    <string name="hex_test6_checkbox3">74</string>
    <string name="hex_test6_checkbox10">ed</string>
    <string name="hex_test6_checkbox17">aa</string>
    <string name="hex_test6_checkbox5">f6</string>
    <string name="hex_test6_checkbox12">11</string>
    <string name="hex_test6_checkbox19">7e</string>
    <string name="hex_test6_checkbox9">a5</string>
    <string name="hex_test6_checkbox2">0b</string>
    <string name="hex_test6_checkbox16">2b</string>
    <string name="hex_test6_checkbox13">86</string>
    <string name="hex_test6_checkbox6">52</string>
    <string name="hex_test6_checkbox20">08</string>
    <string name="hex_test6_checkbox8">47</string>
    <string name="hex_test6_checkbox1">d8</string>
    <string name="hex_test6_checkbox15">9e</string>
    <string name="hex_test6_checkbox14">64</string>
    <string name="hex_test6_checkbox7">37</string>
    <string name="hex_test6_checkbox21">13</string>
    <string name="hexadecimal_button">Hexadecimal Test</string>
    <string name="base32_button">Base 32 Test</string>
    <string name="word_base">Word Based Representation Test</string>
    <string name="wavatars">Wavatars Test</string>
    <string name="input_here">Enter Words Here</string>
    <string name="restart_button">Restart</string>
    <string name="wavatars_test_view">Is This Picture Match With Yours</string>
    <string name="eng_text">English Word Representation Test</string>
    <string name="chi_text">Chinese Word Representation Test</string>
    <string name="login_text">Please Login With Your Password</string>
    <string name="login_button">Login</string>
    <string name="admin_button">Admin</string>
    <string name="back">Create File</string>
    <string name="loadResult">Load Result</string>
    <string name="qr_code">QR Code Test</string>
    <string name="scan">Scan</string>
    <string name="qr_code_test1_tv">Is This The Content You Want?</string>
    <string name="delete">Delete</string>


</resources>
