<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <Button
        android:layout_width="850dp"
        android:layout_height="wrap_content"
        android:text="@string/base32_button"
        android:id="@+id/base32Button"
        android:textColor="#00FF0D"
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_above="@+id/textView"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="850dp"
        android:layout_height="wrap_content"
        android:text="@string/hexadecimal_button"
        android:textColor="#00FF0D"
        android:textSize="50sp"
        android:textStyle="bold"
        android:id="@+id/hexadecimalButton"
        android:layout_above="@+id/textView2"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="850dp"
        android:layout_height="wrap_content"
        android:text="@string/word_base"
        android:textColor="#00FF0D"
        android:textSize="50sp"
        android:textStyle="bold"
        android:id="@+id/wordButton"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="850dp"
        android:layout_height="wrap_content"
        android:text="@string/wavatars"
        android:id="@+id/wavButton"
        android:textColor="#00FF0D"
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/textView"
        android:layout_above="@+id/wordButton"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/textView2"
        android:layout_above="@+id/base32Button"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/textView3"
        android:layout_below="@+id/wordButton"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin_button"
        android:id="@+id/mainMenuAdmin"
        android:textColor="#00FF0D"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/textView4"
        android:layout_below="@+id/wavButton"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="850dp"
        android:layout_height="wrap_content"
        android:textColor="#00FF0D"
        android:textSize="50sp"
        android:textStyle="bold"
        android:text="@string/qr_code"
        android:id="@+id/qrCodeButton"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true" />

</RelativeLayout>