<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="#000000"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#00FF0D"
        android:text="@string/message"
        android:textSize="30sp"
        android:id="@+id/hexTest7Key"
        android:padding="30dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:text=""
        android:id="@+id/hexTest7SoundButton"
        android:layout_above="@+id/hexTest7Key"
        android:layout_centerHorizontal="true"
        android:background="@drawable/listen_icon"
        android:baselineAlignBottom="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test4"
        android:textColor="#00FF0D"
        android:textSize="40sp"
        android:textStyle="bold"
        android:padding="30dp"
        android:id="@+id/textView2"
        android:layout_above="@+id/hexTest7SoundButton"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/textView3"
        android:layout_below="@+id/hexTest7Key"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/yes_button"
        android:textColor="#00FF0D"
        android:id="@+id/hexTest7YesButton"
        android:textSize="50sp"
        android:layout_below="@+id/hexTest7Key"
        android:layout_toLeftOf="@+id/textView3" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/no_button"
        android:id="@+id/hexTest7NoButton"
        android:textSize="50sp"
        android:textColor="#00FF0D"
        android:layout_alignTop="@+id/textView3"
        android:layout_toRightOf="@+id/textView3" />

</RelativeLayout>
